# itselectric-automation

./: .gitignore  EmailSheets.spec  LICENSE  README.md  app.spec  build_app.sh  com.itselectric.server.plist  config.example.yaml  decision_tree.example.yaml  decision_tree.yaml  geocache.json  install_service.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  run_server.sh  test_script.py
.github/workflows/: ci.yml
docs/: brand-guidelines.md  configuration.md  email-template-guide.md  hubspot.md  repo-overview.md  testing.md
docs/dd/: website-migration.md
docs/plans/: 2026-03-29-hubspot-contact-creation.md  2026-04-11-email-decision-tree.md  2026-04-11-gmail-email-send.md  2026-04-19-website-migration.md  2026-04-20-website-phase3.md  2026-04-20-website-phase4.md
email_templates/: california_car_info.txt  general_car_info.html  general_car_info.txt  tell_me_more_brooklyn.html  tell_me_more_dc.html  tell_me_more_general.html  tell_me_more_massachusetts.html  waitlist.html  waitlist.txt
server/: db.py  log_store.py  main.py  models.py  pipeline_service.py  schemas.py  seed.py  sse.py
server/routers/: chargers.py  config.py  contacts.py  export.py  logs.py  pipeline.py  templates.py
src/itselectric/: __init__.py  auth.py  cli.py  decision_tree.py  docs.py  email_layout.py  extract.py  fixture.py  geo.py  gmail.py  gui.py  hubspot.py  markdown_to_html.py  sheets.py
src/itselectric/data/: chargers.csv  request_template.txt
tests/: test_api_chargers.py  test_api_config.py  test_api_contacts.py  test_api_export.py  test_api_pipeline.py  test_api_templates.py  test_decision_tree.py  test_decision_tree_pipeline.py  test_docs.py  test_email_layout.py  test_extract.py  test_fixture.py  test_geo.py  test_gmail.py  test_gui_pipeline.py  test_hubspot.py  test_integration.py  test_markdown_to_html.py  test_models.py  test_pipeline_service.py  test_seed.py  test_sheets.py
tests/fixtures/emails/: 01_parsed_contact.txt  02_parsed_contact.txt  03_unparsed_contact.txt  04_ma_boston.txt  05_dc_washington.txt  06_ca_losangeles.txt  07_ny_brooklyn.txt  08_mi_detroit.txt  09_il_chicago.txt  10_nj_hoboken.txt  11_bad_email.txt
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.test.tsx  App.tsx
web/src/api/: client.test.ts  client.ts
web/src/components/: ContactRow.tsx  Layout.tsx  Sidebar.tsx  StatusStrip.tsx  TreeNodeEditor.test.tsx  TreeNodeEditor.tsx
web/src/hooks/: useContacts.ts  usePipeline.test.ts  usePipeline.ts
web/src/pages/: Config.test.tsx  Config.tsx  Dashboard.tsx  DecisionTreeGuide.tsx  History.test.tsx  History.tsx  Inbox.tsx  InboxDetail.tsx  Logs.tsx  TemplateGuide.tsx
