[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itselectric-automation"
version = "0.1.0"
description = "Gmail-to-Sheets automation for It's Electric form emails"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "geopy>=2.4",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "markdown>=3.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "types-PyYAML>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/itselectric"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
